# robosoc2d

./: .gitignore  README.md  build.sh  run.sh
logplayer/: .gitignore  log_player.py  r2files.py
pyextension/: README.md  robosoc2dmodule.cpp  setup.py  test.py
pyextension/players/: humble_player.py
pyextension/robosoc2dgui/: README.md  setup.py
pyextension/robosoc2dgui/robosoc2dgui/: __init__.py  gui.py
pyextension/robosoc2dgui/test/: test.py
pyextension/robosoc2dplot/: README.md  setup.py
pyextension/robosoc2dplot/robosoc2dplot/: __init__.py  plot.py
pyextension/robosoc2dplot/test/: test.ipynb  test.py
pyextension/robosoc2dplotty/: LICENSE  README.md  setup.py
pyextension/robosoc2dplotty/robosoc2dplotty/: __init__.py  plotty.py
pyextension/robosoc2dplotty/test/: test.ipynb  test.py
src/: CMakeLists.txt  debug_print.h  main.cpp  main_gui.cpp  r2gui.cpp  r2gui.h  simple_player.cpp  simple_player.h  simulator.cpp  simulator.h  vec2.h
